# wordfight

./: Cargo.toml  Dockerfile.server  README.md  Trunk.toml  deno.json  rustfmt.toml  webserver.ts
.github/workflows/: ci.yaml  deploy-webserver.yml  deploy.yml  release.yaml
apps/server/: Cargo.toml
apps/server/src/: main.rs
apps/web/: Cargo.toml  index.html  style.css
apps/web/src/: lib.rs  worker.rs
plugins/active-game/src/: lib.rs
plugins/active_game/: Cargo.toml
plugins/active_game/src/: lib.rs
plugins/bot-controller/: Cargo.toml
plugins/bot-controller/src/: lib.rs
plugins/client/: Cargo.toml
plugins/client/src/: lib.rs  transport.rs
plugins/game/: Cargo.toml
plugins/game/src/: action.rs  arena.rs  letters.rs  lib.rs  player.rs  wordlist.rs
plugins/server/: Cargo.toml
plugins/server/src/: lib.rs  transport.rs
plugins/ui/: Cargo.toml
plugins/ui/src/: lib.rs
src/: action.rs  arena.rs  letters.rs  lib.rs  main.rs  player.rs
web/: index.html  restart-audio-context.js
