[workspace]
members = ["apps/*", "plugins/*"]

[workspace.dependencies]
active_game = { path = "plugins/active_game" }
client = { path = "plugins/client" }
game = { path = "plugins/game" }
server = { path = "plugins/server" }
ui = { path = "plugins/ui" }

bevy = { version = "0.14", default-features = false }
bevy_mod_try_system = "0.2"
bevy-inspector-egui = "0.25"
bevy_prng = { version = "0.7", features = ["wyrand"] }
bevy_rand = { version = "0.7", features = ["wyrand"] }
bevy_renet2 = { git = "https://github.com/UkoeHB/renet2", rev = "0.0.5" }
bevy_replicon = "0.27"
bevy_replicon_renet2 = { git = "https://github.com/UkoeHB/renet2", rev = "0.0.5" }
renet2 = { git = "https://github.com/UkoeHB/renet2", rev = "0.0.5", default-features = false, features = [
    "bevy",
    "serde",
] }
sickle_ui = "0.2"


anyhow = "1.0"
rand_core = { version = "0.6" }
serde = "1.0"
thiserror = "1.0"


[package]
name = "wordfight"
version = "0.1.0"
edition = "2021"
authors = ["Sean Sullivan <me@snen.dev>"]

# Default release setting for wasm since Trunk uses it
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "z"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# Override some settings for native builds.
[profile.release-native]
# Default to release profile values.
inherits = "release"
# Optimize with performance in mind.
opt-level = 3
# Keep debug information in the binary.
strip = "none"

[features]
default = []
dev = ["dep:bevy-inspector-egui"]

[dependencies]
# plugins
active_game = { workspace = true }
game = { workspace = true }

# bevy
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true, optional = true }
