[package]
name = "ui"
version = "0.1.0"
edition = "2021"
author = "Sean Sullivan <me@snen.dev>"

[dependencies]
game = { workspace = true }
bevy = { workspace = true, features = [
    "bevy_color",
    "bevy_winit",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "default_font",
] }
sickle_ui = { workspace = true }
