[package]
name = "ui"
version = "0.1.0"
edition = "2021"
authors = ["Sean Sullivan <me@snen.dev>"]

[dependencies]
game = { workspace = true }

bevy = { workspace = true, default-features = false, features = [
    "bevy_color",
    "bevy_winit",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "webgl2",
] }
bevy_mod_try_system = { workspace = true }
sickle_ui = { workspace = true }

anyhow = { workspace = true }
